Sonar Fixes (5)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>